--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ body {
 }
 
 .quotecontainer {
-    padding: 80px 200px;
+    padding: 80px 300px;
     background-color: #e5e7eb;
 }
 
@@ -112,4 +112,41 @@ body {
     text-align: right;
     font-size: 24px;
     font-weight: bold;
+}
+
+.ctacontainer {
+    display: flex;
+    padding: 80px 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.cta {
+    background-color: #3882f6;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 40px 100px;
+}
+
+.ctabutton {
+    background-color: #3882f6;
+    font-size: 18px;
+    font-weight: bold;
+    color: #f9faf8;
+    padding: 8px 36px;
+    border-radius: 8px;
+    border-color: #f9faf8;
+    border-style: solid;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    padding: 36px;
+    font-size: 18px;
+    color: #e5e7eb;
 }
